fixed the stretching issue

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
 }
 
 .container {
+	/* display: block; */
+	/* width: 100vw;
+	height: 100vh; */
 	position: absolute;
 	top: 25%;
 	left: 90%;
